--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".LoginActivity">
+    tools:context=".ui.LoginActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -75,9 +75,9 @@
 
             <fragment
                 android:id="@+id/fragmentMap"
-                android:name="com.google.android.gms.maps.MapFragment"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="800dp"
                 android:layout_marginBottom="20dp" />
 
             <Button
