--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
     <color name="colorBlueZodiac">#102F51</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorNepal">#90AAC6</color>
+    <color name="colorMineShaft">#262323</color>
+    <color name="colorDarkGray">#E0E0E0</color>
+    <color name="colorSirocco">#60FFFFFF</color>
+    <color name="colorShades">#2BBDC0</color>
 </resources>
