finish handle sign up

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,11 +32,11 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/edtPhone"
+                android:id="@+id/edtMail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_phone"
-                android:inputType="phone" />
+                android:hint="@string/prompt_mail"
+                android:inputType="textEmailAddress" />
 
             <EditText
                 android:id="@+id/edtPassword"
