--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -39,11 +39,11 @@
                 android:src="@drawable/img_avatar" />
 
             <EditText
-                android:id="@+id/edtPhone"
+                android:id="@+id/edtMail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_phone"
-                android:inputType="phone" />
+                android:hint="@string/prompt_mail"
+                android:inputType="textEmailAddress" />
 
             <EditText
                 android:id="@+id/edtPassword"
@@ -81,15 +81,16 @@
                 android:layout_marginBottom="20dp" />
 
             <TextView
-                android:gravity="center_horizontal"
-                android:paddingTop="6dp"
-                android:paddingBottom="6dp"
-                android:paddingRight="16dp"
-                android:paddingLeft="16dp"
                 android:id="@+id/tvError"
-                android:textColor="@color/colorMonza"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:paddingBottom="6dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="6dp"
+                android:textColor="@color/colorMonza" />
+
             <Button
                 android:id="@+id/btnSignUp"
                 android:layout_width="match_parent"
