--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="10dp"
@@ -19,7 +18,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart= "20dp"
         android:text="@string/play_list"
         android:textSize="20sp" />
 
@@ -29,15 +28,15 @@
         android:layout_height="30dp"
         android:layout_marginStart="20dp"
         android:background="@drawable/ic_add_new_playlist"
-        android:contentDescription="@string/todo" />
+        android:contentDescription="@string/imagebutton" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:paddingStart="10dp"
+        android:paddingEnd="5dp"
         android:text="@string/tao_moi"
-        android:textSize="20sp"
-        tools:ignore="RtlSymmetry" />
+        android:textSize="20sp" />
 
     <ImageButton
         android:id="@+id/imgChangePlaylist"
@@ -45,15 +44,15 @@
         android:layout_height="30dp"
         android:layout_marginStart="10dp"
         android:background="@drawable/ic_btn_change_playlist"
-        android:contentDescription="@string/todo" />
+        android:contentDescription="@string/imagebutton" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="10dp"
+        android:paddingEnd="5dp"
         android:text="@string/chinh_sua"
-        android:textSize="20sp"
-        tools:ignore="RtlSymmetry" />
+        android:textSize="20sp" />
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
