--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -35,7 +35,7 @@
         android:layout_height="match_parent"
         android:paddingStart="10dp"
         android:paddingEnd="5dp"
-        android:text="@string/tao_moi"
+        android:text="@string/create_new"
         android:textSize="20sp" />
 
     <ImageButton
