--- a/app/src/main/res/layout/list_item_menu.xml
+++ b/app/src/main/res/layout/list_item_menu.xml
@@ -2,15 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
-    android:layout_marginLeft="@dimen/activity_vertical_margin"
-    android:layout_marginRight="@dimen/activity_vertical_margin">
+    android:layout_marginBottom="4dp">
 
     <ImageView
         android:id="@+id/imgMenu"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:contentDescription="@string/description_menu" />
 
     <TextView
