pull origin master

--- a/app/src/main/res/layout/viewholder_playlist_item.xml
+++ b/app/src/main/res/layout/viewholder_playlist_item.xml
@@ -2,6 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="20sp"
+        android:visibility="gone"
+        android:id="@+id/btnCloseShowDelete"
+        android:src="@drawable/ic_delete_playlist"
+        android:contentDescription="@string/imageview" />
 
     <ImageView
         android:layout_width="60dp"
