--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="colorSirocco">#60FFFFFF</color>
     <color name="colorShades">#2BBDC0</color>
     <color name="colorMonza">#CA000D</color>
+    <color name="colorCerulean">#05B3F5</color>
 </resources>
