--- a/app/src/main/res/layout/activity_choice_song.xml
+++ b/app/src/main/res/layout/activity_choice_song.xml
@@ -1,9 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChoiceSongActivity">
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarPlaylistChoice"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/btnToolBarButtonDown"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_down" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/toolbar_text_choice"
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp" />
+    </android.support.v7.widget.Toolbar>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/llChoiceAllSong"
+        android:orientation="horizontal">
+        <RadioButton
+            android:id="@+id/rbItemPlaylistChoice"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:buttonTint="@color/colorCerulean"
+            android:clickable="false"
+            android:focusable="false" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/choiceAllSOng"/>
+
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycleViewPlaylistChoice"
+        android:layout_width="match_parent"
+        android:layout_height="350dp">
+
+    </android.support.v7.widget.RecyclerView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+        <ImageButton
+            android:id="@+id/btnPlaylistChoiceComplete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorSirocco"
+            android:src="@drawable/ic_create_playlist_new"
+            android:tint="@color/colorBlack"
+            android:focusable="false"
+            android:contentDescription="@string/imagebutton" />
+
+        <TextView
+            android:id="@+id/tvPlaylistChoiceAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btnPlaylistChoiceComplete"
+            android:layout_marginBottom="10dp"
+            android:textSize="20sp"
+            android:text="@string/playlist_choice_text_add"
+            android:textColor="@color/colorBlack" />
+    </RelativeLayout>
+</LinearLayout>
