--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -20,37 +20,25 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="10dp"
             android:text="@string/play_list"
             android:textSize="20sp" />
 
-        <ImageButton
-            android:id="@+id/imgAddPlaylist"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/ic_add_new_playlist"
-            android:contentDescription="@string/imagebutton" />
-
         <TextView
+            android:id="@+id/tvAddPlaylist"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingEnd="5dp"
-            android:paddingStart="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:drawableStart="@drawable/ic_add"
+            android:padding="10dp"
             android:text="@string/create_new"
             android:textSize="20sp" />
 
-        <ImageButton
-            android:id="@+id/imgChangePlaylist"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="10dp"
-            android:background="@drawable/ic_btn_change_playlist"
-            android:contentDescription="@string/imagebutton" />
-
         <TextView
+            android:id="@+id/tvChangePlaylist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_btn_change"
             android:paddingEnd="5dp"
             android:paddingStart="10dp"
             android:text="@string/change_playlist"
