--- a/app/src/main/res/layout/dialog_create_new_playlist.xml
+++ b/app/src/main/res/layout/dialog_create_new_playlist.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="300dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="300dp"
     android:layout_height="300dp"
-    android:layout_gravity="center"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/title_dialog"
-    android:gravity="center"
-    android:textSize="15sp"
-    android:id="@+id/tvDialogCreateNewPlaylist"
-    />
-    <EditText
+    android:layout_gravity="center">
+
+    <TextView
+        android:id="@+id/tvDialogCreateNewPlaylist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:maxLines="1"
+        android:gravity="center"
+        android:text="@string/title_dialog"
+        android:textSize="15sp" />
+
+    <EditText
         android:id="@+id/edtNamePlaylist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/tvDialogCreateNewPlaylist"
+        android:layout_marginTop="30dp"
         android:hint="@string/input_playlist"
-        android:textSize="20sp"
-        android:inputType="text" />
+        android:inputType="text"
+        android:maxLines="1"
+        android:textSize="20sp" />
 </RelativeLayout>
