--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <internship.asiantech.a2018summerfinal.ui.CircleImage
+    <internship.asiantech.a2018summerfinal.ui.custom_view.CircleImage
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/img_avatar_2"
