--- a/app/src/main/res/layout/activity_play_music.xml
+++ b/app/src/main/res/layout/activity_play_music.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.PlayMusicActivity">
+    tools:context=".ui.activities.PlayMusicActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
-        <internship.asiantech.a2018summerfinal.ui.CircleImage
+        <internship.asiantech.a2018summerfinal.ui.custom_view.CircleImage
             android:id="@+id/imgSong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
