--- a/app/src/main/res/layout/activity_profile_user.xml
+++ b/app/src/main/res/layout/activity_profile_user.xml
@@ -6,11 +6,11 @@
     android:background="@color/colorNepal"
     android:gravity="center"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ui.ProfileUserActivity">
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".ui.activities.ProfileUserActivity">
 
     <LinearLayout
         android:id="@+id/llProfileUser"
@@ -50,43 +50,30 @@
             android:hint="@string/prompt_age"
             android:inputType="number" />
 
-        <EditText
-            android:id="@+id/edtPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:enabled="false"
-            android:hint="@string/prompt_password"
-            android:inputType="textPassword" />
-
-        <EditText
-            android:id="@+id/edtNewPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/prompt_new_password"
-            android:inputType="textPassword"
-            android:visibility="gone" />
-
-        <EditText
-            android:id="@+id/edtRepeatPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/prompt_repeat_password"
-            android:inputType="textPassword"
-            android:visibility="gone" />
-
         <fragment
             android:id="@+id/fragmentMap"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp" />
+
+        <TextView
+            android:id="@+id/tvError"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:paddingLeft="16dp"
+            android:paddingTop="6dp"
+            android:paddingRight="16dp"
+            android:textColor="@color/colorMonza" />
 
         <Button
             android:id="@+id/btnEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:background="@color/colorBlueZodiac"
             android:text="@string/action_edit"
             android:textColor="@color/colorWhite"
