--- a/app/src/main/res/layout/activity_searched.xml
+++ b/app/src/main/res/layout/activity_searched.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.SearchedActivity">
+    tools:context=".ui.activities.SearchedActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewMusic"
