--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,12 +6,11 @@
     android:background="@color/colorNepal"
     android:gravity="center"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ui.LoginActivity">
-    tools:context=".ui.SignUpActivity">
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".ui.activities.LoginActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -32,12 +31,12 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imgAvatar"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginBottom="20dp"
-                android:src="@drawable/img_avatar" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/action_sign_up"
+                android:textColor="@color/colorBlack"
+                android:textSize="40dp" />
 
             <EditText
                 android:id="@+id/edtMail"
@@ -45,11 +44,6 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_mail"
                 android:inputType="textEmailAddress" />
-            android:id="@+id/edtMail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/prompt_mail"
-            android:inputType="textEmailAddress" />
 
             <EditText
                 android:id="@+id/edtPassword"
@@ -83,22 +77,16 @@
                 android:id="@+id/fragmentMap"
                 android:name="com.google.android.gms.maps.MapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:layout_marginBottom="20dp" />
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="800dp"
-            android:layout_marginBottom="20dp" />
+                android:layout_height="150dp" />
 
             <TextView
                 android:id="@+id/tvError"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:paddingBottom="6dp"
                 android:paddingLeft="16dp"
-                android:paddingRight="16dp"
                 android:paddingTop="6dp"
+                android:paddingRight="16dp"
                 android:textColor="@color/colorMonza" />
 
             <Button
