--- a/app/src/main/res/layout/activity_list_album.xml
+++ b/app/src/main/res/layout/activity_list_album.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.activities.ListAlbumActivity">
+    tools:context=".ui.activity.ListAlbumActivity">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
