--- a/app/src/main/res/layout/activity_play_music.xml
+++ b/app/src/main/res/layout/activity_play_music.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.PlayMusicActivity">
+    tools:context=".ui.activity.PlayMusicActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
