--- a/app/src/main/res/layout/fragment_choice_song.xml
+++ b/app/src/main/res/layout/fragment_choice_song.xml
@@ -53,8 +53,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycleViewPlaylistChoice"
         android:layout_width="match_parent"
-        android:layout_height="350dp">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="350dp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
