--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -1,54 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="10dp"
     android:orientation="vertical">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tvCountPlaylist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:textSize="20sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="@string/play_list"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/tvAddPlaylist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:drawableStart="@drawable/ic_add"
-            android:padding="10dp"
-            android:text="@string/create_new"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/tvChangePlaylist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_btn_change"
-            android:paddingEnd="5dp"
-            android:paddingStart="10dp"
-            android:text="@string/change_playlist"
-            android:textSize="20sp" />
-    </LinearLayout>
-
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerviewPlaylist"
+        android:id="@+id/recyclerViewPlaylist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-    </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/imgAdd"
+        style="@style/MediumIcon"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_add_50dp" />
+</FrameLayout>
