--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,9 @@
         <item name="android:layout_height">20dp</item>\
         <item name="android:layout_marginEnd">20dp</item>
     </style>
+
+    <style name="MediumIcon">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>\
+    </style>
 </resources>
