--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,7 +19,7 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <internship.asiantech.a2018summerfinal.ui.customview.CircleImage
             android:id="@+id/imgAvatar"
             android:layout_width="100dp"
             android:layout_height="100dp"
